# LAB06

./: SOLVE
formatter_ex_lib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
formatter_lib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
hello_world/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
hello_world/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
solver/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  solver_app
solver_lib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
